<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_above="@+id/textView"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="Tell a friend:"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:layout_marginLeft="10dp"
            android:onClick="share"
            android:padding="10dp"
            android:background="@drawable/btn_bg1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/buttons"
        android:text="@string/main_menu_txt"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="mosque background"
        app:srcCompat="@drawable/bgg"/>

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenu_btns"
            android:background="@drawable/btn_bg"
            android:onClick="play"
            android:text="@string/play_btn"/>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenu_btns"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:onClick="highscore"
            android:text="@string/highscore_btn"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/mainMenu_btns"
            android:background="@drawable/btn_bg"
            android:onClick="settings"
            android:text="@string/settings_btn"/>

    </LinearLayout>


</RelativeLayout>